@@ -25,12 +25,14 @@
 
 #include "../globals.h"
 #include "../npc.h"
+#include "../npc_id.h"
 #include "../sound.h"
 #include "../effect.h"
 #include "../layers.h"
 #include "../game_main.h"
 #include "../main/speedrunner.h"
 #include "../control/joystick.h"
+#include "../compat.h"
 
 
 void KillNPC(int A, int B)
@@ -234,6 +236,18 @@ void KillNPC(int A, int B)
                     NewEffect(2, NPC[A].Location);
                 else if(NPC[A].Type == 242)
                     NewEffect(126, NPC[A].Location);
+                else if(NPC[A].Type == NPCID_BLOOPER && g_compatibility.fix_blooper_stomp_effect)
+                {
+                    NPC[A].Location.SpeedY = 0.123;
+                    NewEffect(121, NPC[A].Location, NPC[A].Direction);
+                    PlaySound(SFX_ShellHit);
+                }
+                else if(NPC[A].Type == NPCID_BLOOPER_SMB3 && g_compatibility.fix_blooper_stomp_effect)
+                {
+                    NPC[A].Location.SpeedY = 0.123;
+                    NewEffect(117, NPC[A].Location, NPC[A].Direction);
+                    PlaySound(SFX_ShellHit);
+                }
                 else
                     NewEffect(84, NPC[A].Location, NPC[A].Direction);
             }
